--- a/.env.example
+++ b/.env.example
@@ -48,6 +48,19 @@ BACKUP_TIMEZONE=America/Sao_Paulo
 BACKUP_MAX_BACKUPS=3
 BACKUP_STOP_INSTANCES=false
 
+# =========================
+# DATABASE SETTINGS
+# =========================
+# Deixe em branco para usar SQLite local ou configure para PostgreSQL
+# Exemplo: postgres://whatsapp:whatsapp@postgres:5432/whatsapp
+DB_URI=
+
+# PostgreSQL settings (usado apenas se DB_URI estiver configurado)
+POSTGRES_USER=whatsapp
+POSTGRES_PASSWORD=whatsapp
+POSTGRES_DB=whatsapp
+POSTGRES_PORT=5432
+
 # S3 Configuration for Backups
 BACKUP_S3_BUCKET=
 BACKUP_S3_REGION=us-east-1
