--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "helmet": "^7.1.0",
     "js-yaml": "^4.1.0",
     "jsonwebtoken": "^9.0.2",
+    "pg": "^8.16.3",
     "qrcode": "^1.5.3",
     "socket.io": "^4.7.4",
     "sqlite3": "^5.1.6",
@@ -50,6 +51,7 @@
     "@types/express": "^5.0.3",
     "@types/js-yaml": "^4.0.9",
     "@types/node": "^20.19.11",
+    "@types/pg": "^8.15.5",
     "@types/swagger-ui-express": "^4.1.8",
     "@types/tar": "^6.1.13",
     "@types/ws": "^8.18.1",
